test/tests/compiler/11_long_integers/valid/extra_credit/plx1_cast_incr_decr_lval.plx
pub fn main(none) i32 {
    x: i32 = 1
    x = --cast<i32>(x)
    return cast<i32>(x)++
}
