test/tests/compiler/11_long_integers/invalid_parse/plx1_cast_empty_exp.plx
pub fn main(none) i32 {
    return cast<i64>()
}
